developing mobile responsive gsap card, fixing overlaping section using gsap, and fixing UI graphic design landing page

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -11,7 +11,7 @@ section#About-section {
         border-top-right-radius: 60px 70px;
         box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px; */
-        height: 100%;
+        height: 100vh;
         padding: 100px;
     }
 
@@ -46,6 +46,8 @@ section#About-section {
     margin-left: 3px;
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    pointer-events: auto;
+    
 }
 .skills-pill:hover{
     background-color:#ff6600 ;
@@ -57,6 +59,7 @@ section#About-section {
 }
 .icon-profile{
     padding:10px;
+    pointer-events: auto;
 }
 .github-logo-icon, .linkedin-logo-icon{
 width: 30px;
