--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -4,6 +4,7 @@ background-color: #e0d9d9;
 border-top-left-radius: 60px 70px;
 border-top-right-radius: 60px 70px;
 box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+height: 100vh;
       
     
 }
