--- a/src/components/Landing/landing.css
+++ b/src/components/Landing/landing.css
@@ -1,12 +1,14 @@
+.Landing-section{
+    height: 100vh;
+}
+  
 
-    .pill-design {
-
+        .pill-design {
             background-color: #e6e6e6d6;
-            /* height: 100%; */
+            height: 65%;
             display: block;
             width: 30%;
             text-align: center;
-            padding: 5px;
             border-radius: 30px;
             margin-bottom: 10px;
             box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
@@ -14,9 +16,13 @@
             text-transform: capitalize;
             padding: 11px;
             border: solid 1px;
+            pointer-events: auto;
+            transition: 1s;
+            margin: 10px;
+        }
         
-    }
-
+    
+ 
 .blob-container{
     height: 100%;
     width: 100%;
@@ -49,10 +55,8 @@ height: 650px!important;
 width: 100%;
 justify-content: center;
 position: relative;
-bottom: 80px;
 }
 #landing-page{
-margin-top: 100px;
 border-radius: 70px;
 padding: 10px;
 height: 100vh;
@@ -60,6 +64,7 @@ height: 100vh;
 }
 .landing-text{
     width: 100%;
+    display: inline-flex;
 }
 .landing-text h1{
     margin-top: 10px;
@@ -77,21 +82,27 @@ height: 100vh;
 .landing-catalog{
     display: inline-flex;
     width: 100%;
+    
+        justify-content: end;
+    
 }
 .landing-catalog h1 {
     font-weight: 500;
     margin-top: 10px;
-    font-size: 1.8rem;
+    font-size: 0.8rem;
+    width: 300px;
+
 }
 .circle {
-    height: 45px;
-    width: 85px;
-    background-color: rgb(77, 71, 255);
-    border-radius: 50%;
-    margin: 10px;
-    /* margin-top: 12px; */
-    /* margin-right: 20px; */
-
+ 
+        height: 45px;
+        width: 45px;
+        background-color: rgb(77, 71, 255);
+        border-radius: 50%;
+        margin: 10px;
+        /* margin-top: 12px; */
+        /* margin-right: 20px; */
+    
   }
 @media screen and (max-width: 988px) {
     
