--- a/src/index.css
+++ b/src/index.css
@@ -50,10 +50,11 @@ body{
 }
 section{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow-y: hidden;
     display: block;
     position: relative;
+    pointer-events: none;
 }
 h1,h2,h3,h4,h5,h6{
     margin: 0;
